cleanup tmux status line

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,9 @@
 source ~/.config/tmux/keybindings/common
+
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
 
-set-option -g default-terminal 'screen-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal 'screen-256color'
+set -g terminal-overrides ',xterm-256color:RGB'
 
 set -g base-index 1
 set -g detach-on-destroy off
@@ -25,18 +26,19 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g status-left "#{E:@catppuccin_status_session}"
-set -g status-right "#{E:@catppuccin_status_directory}"
-set -ag status-right "#{E:@catppuccin_status_application}"
+set -g status-right ""
+# set -ag status-right "#{E:@catppuccin_status_directory}"
+# set -ag status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 
 set -g @catppuccin_window_current_number_color "#{@thm_peach}"
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #{pane_current_command}"
+set -g @catppuccin_window_current_text " #{pane_current_command}"
 
 set -g @continuum-restore 'on'
 set -g @resurrect-dir '~/.config/tmux/resurrect'
 
-run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
-# initial setup clone tpm once: https://github.com/tmux-plugins/tpm
 run '~/.config/tmux/plugins/tpm/tpm'
 
