--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -34,9 +34,8 @@ set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -g @catppuccin_window_current_number_color "#{@thm_peach}"
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_window_text " #{pane_current_command}"
-set -g @catppuccin_window_current_text " #{pane_current_command}"
-
+set -g @catppuccin_window_text " #{?#{!=:#{window_name},-},#{window_name},#{pane_current_command}}"
+set -g @catppuccin_window_current_text " #{?#{!=:#{window_name},-},#{window_name},#{pane_current_command}}"
 set -g @continuum-restore 'on'
 set -g @resurrect-dir '~/.config/tmux/resurrect'
 
